# playsync

./: Cargo.toml  LICENSE  MEMORY.md  README.md
crates/playsync-cli/: Cargo.toml
crates/playsync-cli/locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  pt-BR.yml  ru.yml  zh-CN.yml
crates/playsync-cli/src/: actions.rs  i18n.rs  ipc_client.rs  main.rs  tui.rs
crates/playsync-core/: Cargo.toml
crates/playsync-core/src/: archive.rs  config.rs  db.rs  ipc.rs  lib.rs  manifest.rs  naming.rs  steam.rs  versions.rs
crates/playsync-core/src/cloud/: box_com.rs  gdrive.rs  mod.rs
crates/playsyncd/: Cargo.toml
crates/playsyncd/src/: ipc.rs  main.rs  sync.rs  watcher.rs
packaging/aur/: PKGBUILD
packaging/systemd/: playsyncd.service
