[workspace]
resolver = "2"
members = [
    "crates/playsync-core",
    "crates/playsyncd",
    "crates/playsync-cli",
]

[workspace.package]
version = "0.5.2"
edition = "2021"
license = "MIT"
authors = ["PlaySync contributors"]
repository = "https://github.com/eliasfarah/playsync"
rust-version = "1.81"

# Versões centralizadas: cada crate do workspace referencia
# `{ workspace = true }` para nao divergir de versao entre si.
[workspace.dependencies]
playsync-core = { path = "crates/playsync-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
glob = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal", "time", "process", "io-util", "sync"] }

# Otimizado para binario pequeno/estatico (packaging via cargo-deb / AUR)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
