[package]
name = "playsync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deteccao da Steam, protocolo IPC, historico (sqlite) e backends de nuvem para o PlaySync"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

# Deteccao de bibliotecas/AppIDs da Steam (libraryfolders.vdf, appmanifest_*.acf)
steamlocate = "2"

# Historico de backups (uma tabela simples: appid, jogo, timestamp, status, destino)
rusqlite = { version = "0.40", features = ["bundled"] }

# Cliente HTTP para os backends de nuvem (rustls no lugar de OpenSSL: facilita build estatico/musl)
# "multipart": Box usa multipart/form-data pro upload (Drive usa multipart/related, montado na mao).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart"] }
async-trait = "0.1"

# Fluxo OAuth2 (Google Drive / Box): abre o navegador do usuario e recebe o
# redirect num servidor HTTP local efemero. `default-features = false` desliga
# o cliente HTTP embutido do oauth2 (que traria uma 2a copia do reqwest); a
# troca do `code` por token usa o mesmo reqwest acima via `AsyncHttpClient`.
oauth2 = { version = "5", default-features = false }
webbrowser = "1"
tiny_http = "0.12"

# Compacta save_paths (arquivo ou diretorio inteiro) num .zip antes do upload
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
